# sengine

./: .gitignore  CMakeLists.txt  LICENSE  build.bat  ground.c  ground.h  ideas.txt  main.c
include/glad/: gl.h
resources/: cube.glsl  shaders.glsl  sprite.glsl
src/: arrays.c  buffer.h  camera.c  camera.h  draw2d.c  gl.c  input.c  input.h  main.c  math.c  math.h  meth.c  primative.c  render.c  render.h  render_cube.c  render_cube.h  render_mesh.c  shaders.glsl  sio.c  sio.h  sshader.c  sshader.h  ssprite.c  ssprite.h  sstring.c  sstring.h  swindow.c  swindow.h  texture.c  texture.h  texturepacking.c  texturepacking.h  vecmath.h
